Code cleanup and file reorganization

--- a/HTML/HTML Assignments.html
+++ b/HTML/HTML Assignments.html
@@ -10,16 +10,16 @@
 </head>
 
 <body>
-    <h1> Hello world</h1>
+    <h1> Hello world!!</h1>
+    <h2> Anchor tag</h2>
     <a href = 'https://www.google.com' target ='_blank'>GOOGLE</a>
     <div>
         <h1> Hello world 23</h1>
-        <h1> Hello world 24</h1>
     <div>
         <P> Lorem ipsum dolor sit amet.
         </P>
     </div>
-    
+     <h2> Ordered and unordered lists</h2>
     <ol type ='i' start ='5'>
         <li>Apple</li>
         <li>Orange</li>
@@ -31,14 +31,8 @@
         <li>Orange</li>
         <li>Grape</li>
     </ul>
-    <img src="/../../../Hanuman.jpg" alt = 'image of lord hanuman' style ='width:25%; height:25%' title ='Lord Hanuman'>
-    <figure>
-
-    </figure>
-    <picture>
-        
-    </picture>
-    <p>Lorem <em>ipsum</em> dolor sit amet.</p>
+    <h2> Img tag</h2>
+    <img src="/Pics/Hanuman.jpg" alt = 'image of lord hanuman' style ='width:25%; height:25%' title ='Lord Hanuman'>
 
     <h1><b>Different input types for Forms</b></h1>
     <form>
@@ -61,11 +55,11 @@
 
 
     </form>
-
+    <h2> Picture tag with different sources</h2>
     <picture>
-        <source media="(min-width:900px)" srcset="../friends2.jpg">
-        <source media="(min-width:600px)" srcset='../friends.jpg'>
-        <img src="../hanuman.jpg" alt="Friends" style="width:300px;">
+        <source media="(min-width:900px)" srcset="/Pics/friends2.jpg">
+        <source media="(min-width:600px)" srcset="/Pics/friends.jpg">
+        <img src="/Pics/Hanuman.jpg" alt="Friends" style="width:300px;">
     </picture>
     <!-- <iframe src="https://www.google.com/webhp?igu=1">
 
@@ -361,7 +355,7 @@
 </div>
 <h3>row align-items-baseline</h3>
 <div class="flex-container row align-items-baseline"> 
-    <div class="flex-item fixed-height"> <img src="../red.png"> </div>
+    <div class="flex-item fixed-height"> <img src="/Pics/red.png"> </div>
     <div class="flex-item min-height">Min.height</div>
     <div class="flex-item max-height">Max.height</div>
     <div class="flex-item">Default height</div>
