--- a/javascript/Type conversions and matrix transpose.html
+++ b/javascript/Type conversions and matrix transpose.html
@@ -9,7 +9,7 @@
     
 </head>
 <body>
-    <script src="/javascript/js_practice.js"></script> 
+    <script src="/javascript/Type conversions and matrix transpose.js"></script> 
 
 
 </body>
