Moved practice code to index.html

--- a/HTML/HTML Assignments.html
+++ b/HTML/HTML Assignments.html
@@ -10,52 +10,7 @@
 </head>
 
 <body>
-    <h1> Hello world!!</h1>
-    <h2> Anchor tag</h2>
-    <a href = 'https://www.google.com' target ='_blank'>GOOGLE</a>
-    <div>
-        <h1> Hello world 23</h1>
-    <div>
-        <P> Lorem ipsum dolor sit amet.
-        </P>
-    </div>
-     <h2> Ordered and unordered lists</h2>
-    <ol type ='i' start ='5'>
-        <li>Apple</li>
-        <li>Orange</li>
-        <li>Grape</li>
-
-    </ol>
-    <ul type ='circle'>
-        <li>Apple</li>
-        <li>Orange</li>
-        <li>Grape</li>
-    </ul>
-    <h2> Img tag</h2>
-    <img src="/Pics/Hanuman.jpg" alt = 'image of lord hanuman' style ='width:25%; height:25%' title ='Lord Hanuman'>
-
-    <h1><b>Different input types for Forms</b></h1>
-    <form>
-        <label for = 'telephone number'>Telephone Number:</label><br>
-        <input type = 'tel' id = 'telephone number' name = 'telephone number'><br><hr>
-        <label for = 'number'>Number:</label><br>
-        <input type = 'number' id = 'number' name = 'Number'><br><hr>
-        <h3>Radio Buttons:</h3>
-        <input type = 'radio' id = 'yes' name = 'radio' value="Yes">
-        <label for = 'radio'>Yes</label><br>
-        <input type = 'radio' id = 'no' name = 'radio' value="'No">
-        <label for = 'radio'>No</label><br><hr><br>
-        <label for = 'search'>Search:</label><br>
-        <input type = 'search' id = 'search' name = 'search'><br><hr><br>
-        <label for = 'submit'>Submit:</label>
-        <input type = 'submit' id = 'submit' name = 'submit'><br><hr><br>
-        <label for = 'button'>Button:</label>
-        <input type = 'button' id = 'button' name = 'button'><br><hr><br>
-        <button type="button">Click here</button><br><hr><br>
-
-
-    </form>
-    <h2> Picture tag with different sources</h2>
+    <h1> Picture tag with different sources</h1>
     <picture>
         <source media="(min-width:900px)" srcset="/Pics/friends2.jpg">
         <source media="(min-width:600px)" srcset="/Pics/friends.jpg">
@@ -64,7 +19,7 @@
     <!-- <iframe src="https://www.google.com/webhp?igu=1">
 
     </iframe><br> -->
-
+    <h1>Raising the font</h1>
     <p id="initials">
         Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
         Vero omnis animi, molestiae non explicabo quidem dolore nulla <br>
@@ -436,7 +391,7 @@
         </div>      
     </div>
 </div> -->
-<script src="../javascript/index.js"></script>   
+<!-- <script src="../javascript/index.js"></script>    -->
 </body> 
 
 </html>
